[project]
name = "iserv-scraper"
version = "1.1.0"
description = ""
license = { text = "WTFPL" }
authors = [
  { name = "Keterion" }
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  "mechanize>=0.4.9",
  "cookiejar>=0.0.3",
  "beautifulsoup4>=4.12.2",
  "html2text>=2020.1.16"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
